[feat] Fix bug causing title to shift down 50% and add responsive logo text shadow feature

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -3,14 +3,10 @@
 }
 
 #title {
-  /*font-family: "arial", sans-serif;*/
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  /*font-size: 6em;*/
   font-weight: bold;
-  text-align: center;
   text-shadow: 3px 3px #1C1B1B;
-  transform: translateY(50%);
 }
 
 .logo {
